--- a/package.json
+++ b/package.json
@@ -38,27 +38,28 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/cli": "3.3.19",
     "@tarojs/components": "3.3.19",
+    "@tarojs/react": "3.3.19",
     "@tarojs/runtime": "3.3.19",
     "@tarojs/taro": "3.3.19",
-    "@tarojs/react": "3.3.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "taro-hooks": "latest"
+    "taro-hooks": "latest",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@tarojs/mini-runner": "3.3.19",
     "@tarojs/webpack-runner": "3.3.19",
+    "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.3.19",
     "eslint": "^6.8.0",
     "eslint-config-taro": "3.3.19",
-    "stylelint": "9.3.0",
-    "@types/react": "^17.0.2",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "stylelint": "9.3.0"
   },
   "engines": {
     "node": ">=12.0.0"
